--- a/templates/onduleur/show.html.twig
+++ b/templates/onduleur/show.html.twig
@@ -66,7 +66,7 @@
                                     <option value="entreprise_id" {% if selectedRecherche == 'entreprise_id' %} selected {% endif %}>Site</option>
                                     <option value="date_installation" {% if selectedRecherche == 'date_installation' %} selected {% endif %}>Date d'installation</option>
                                     <option value="date_achat" {% if selectedRecherche == 'date_achat' %} selected {% endif %}>Date d'achat</option>
-                                    <option value="date_garantie" {% if selectedRecherche == 'date_garantie' %} selected {% endif %}>Date de garantie</option>
+                                    <option value="date_garantie" {% if selectedRecherche == 'date_garantie' %} selected {% endif %}>Date de remplacement</option>
                                     <option value="commentaire" {% if selectedRecherche == 'commentaire' %} selected {% endif %}>Commentaire</option>
                                 </select>
                                 <label for="search" class="form-label"></label>
@@ -119,7 +119,7 @@
                                             <th class="align-middle text-center">{% if selectedRecherche == 'entreprise_id' %} <span class="badge bg-primary">Site</span> {% else %} Site {% endif %}</th>
                                             <th class="align-middle text-center">{% if selectedRecherche == 'date_installation' %} <span class="badge bg-primary">Date d'installation</span> {% else %} Date d'installation {% endif %}</th>
                                             <th class="align-middle text-center">{% if selectedRecherche == 'date_achat' %} <span class="badge bg-primary">Date d'achat</span> {% else %} Date d'achat {% endif %}</th>
-                                            <th class="align-middle text-center">{% if selectedRecherche == 'date_garantie' %} <span class="badge bg-primary">Date de garantie</span> {% else %} Date de garantie {% endif %}</th>
+                                            <th class="align-middle text-center">{% if selectedRecherche == 'date_garantie' %} <span class="badge bg-primary">Date de garantie</span> {% else %} Date de remplacement {% endif %}</th>
                                             <th class="align-middle text-center">{% if selectedRecherche == 'commentaire' %} <span class="badge bg-primary">Commentaire</span> {% else %} Commentaire {% endif %}</th>
                                             <th class="align-middle text-center">Action</th>
                                         </tr>
