--- a/templates/imprimante/edit.html.twig
+++ b/templates/imprimante/edit.html.twig
@@ -68,7 +68,10 @@
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Sauvegarder</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">
+                                    <span class="fas fa-floppy-disk"></span>
+                                    &nbsp;Sauvegarder
+                                </button>
                             </div>
                         {{ form_end(imprimanteForm) }}
                     </div>
@@ -83,7 +86,9 @@
                     <div class="card-body bg-light">
                         <center>
                             <img src="{{ qrCodes }}" alt="" id="qrCodeImage" /><br><br>
-                            <button class="btn btn-primary me-1 mb-1" id="printButton">Imprimer le QR Code</button>
+                            <button class="btn btn-primary me-1 mb-1" id="printButton">
+                                <span class="fas fa-print"></span>
+                                &nbsp;Imprimer le QR Code</button>
                         </center>
                     </div>
                 </div>
