--- a/templates/entreprise/edit.html.twig
+++ b/templates/entreprise/edit.html.twig
@@ -44,7 +44,10 @@
                                 Champs obligatoires
                             </label>
                             <div class="d-flex justify-content-end">
-                                <button class="btn btn-primary me-1 mb-1" type="submit">Sauvegarder</button>
+                                <button class="btn btn-primary me-1 mb-1" type="submit">
+                                    <span class="fas fa-floppy-disk"></span>
+                                    &nbsp;Sauvegarder
+                                </button>
                             </div>
                         {{ form_end(entrepriseForm) }}
                     </div>
