--- a/templates/emplacement/show.html.twig
+++ b/templates/emplacement/show.html.twig
@@ -103,10 +103,10 @@
                                                 <tr class="align-middle text-center">
                                                     <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap nom">
-                                                        <a href="{{ path('admin.emplacement.edit', {id: emplacement.id}) }}"><b>{{ emplacement.nom }}</b></a>
+                                                        <a href="{{ path('admin.emplacement.edit', {slug: emplacement.slug}) }}"><b>{{ emplacement.nom }}</b></a>
                                                     </td>
                                                     <td class="text-nowrap">
-                                                        <a href="{{ path('admin.emplacement.edit', {id: emplacement.id}) }}" class="btn btn-primary btn-sm">
+                                                        <a href="{{ path('admin.emplacement.edit', {slug: emplacement.slug}) }}" class="btn btn-primary btn-sm">
                                                             <span class="bi bi-pencil-square"></span>
                                                         </a>
 
