--- a/templates/imprimante/show.html.twig
+++ b/templates/imprimante/show.html.twig
@@ -136,7 +136,7 @@
                                                 <tr class="align-middle text-center">
                                                     <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
-                                                        <a href="{{ path('admin.imprimante.edit', {id: imprimante.id}) }}">
+                                                        <a href="{{ path('admin.imprimante.edit', {slug: imprimante.slug}) }}">
                                                             <b>{{ imprimante.nom }}</b>
                                                         </a>
                                                     </td>
@@ -174,7 +174,7 @@
                                                         </span>
                                                     </td>
                                                     <td class="text-nowrap">
-                                                        <a href="{{ path('admin.imprimante.edit', {id: imprimante.id}) }}" class="btn btn-primary btn-sm">
+                                                        <a href="{{ path('admin.imprimante.edit', {slug: imprimante.slug}) }}" class="btn btn-primary btn-sm">
                                                             <span class="bi bi-pencil-square"></span>
                                                         </a>
 
