--- a/templates/serveur/show.html.twig
+++ b/templates/serveur/show.html.twig
@@ -138,7 +138,7 @@
                                                 <tr class="align-middle text-center">
                                                     <td class="text-nowrap">{{ currentIndex }}</td>
                                                     <td class="text-nowrap">
-                                                        <a href="{{ path('admin.serveur.edit', {id: serveur.id}) }}"><b>{{ serveur.nom }}</b></a>
+                                                        <a href="{{ path('admin.serveur.edit', {slug: serveur.slug}) }}"><b>{{ serveur.nom }}</b></a>
                                                     </td>
                                                     <td class="text-nowrap">
                                                         {{ serveur.ip | default('<span class="badge bg-danger">N/A</span>') | raw }}
@@ -177,7 +177,7 @@
                                                         </span>
                                                     </td>
                                                     <td class="text-nowrap">
-                                                        <a href="{{ path('admin.serveur.edit', {id: serveur.id}) }}" class="btn btn-primary btn-sm">
+                                                        <a href="{{ path('admin.serveur.edit', {slug: serveur.slug}) }}" class="btn btn-primary btn-sm">
                                                             <span class="bi bi-pencil-square"></span>
                                                         </a>
 
