update: change path file base.html.twig to folder partials

--- a/templates/fournisseur/edit.html.twig
+++ b/templates/fournisseur/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Édition du fournisseur{% endblock %}
 
