--- a/templates/gui/partials/menuHaut.html.twig
+++ b/templates/gui/partials/menuHaut.html.twig
@@ -96,7 +96,8 @@
         <li class="nav-item dropdown">
             <a class="nav-link pe-0 ps-2" id="navbarDropdownUser" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 <div class="avatar avatar-xl">
-                    <img class="rounded-circle" src="{{ asset('assets/img/avatar/defaut.png') }}" alt="" />
+{#                    <img class="rounded-circle" src="{{ asset('assets/img/avatar/defaut.png') }}" alt="" />#}
+                    <img class="rounded-circle" src="{{ asset('assets/img/favicons/favicon-removebg.png') }}" alt="" />
                 </div>
             </a>
             <div class="dropdown-menu dropdown-caret dropdown-caret dropdown-menu-end py-0" aria-labelledby="navbarDropdownUser">
