--- a/templates/telephone_fixe/create.html.twig
+++ b/templates/telephone_fixe/create.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Création d'un téléphone fixe{% endblock %}
 {% block stylesheets %}
