--- a/templates/ecran/edit.html.twig
+++ b/templates/ecran/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Édition de l'écran{% endblock %}
 {% block stylesheets %}
