--- a/templates/ecran/show.html.twig
+++ b/templates/ecran/show.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Gestion des écrans{% endblock %}
 
