--- a/templates/etat/create.html.twig
+++ b/templates/etat/create.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Création d'un état{% endblock %}
 
