--- a/templates/imprimante/create.html.twig
+++ b/templates/imprimante/create.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Création d'une imprimante{% endblock %}
 {% block stylesheets %}
