--- a/templates/pc_portable/edit.html.twig
+++ b/templates/pc_portable/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Édition du PC Portable{% endblock %}
 {% block stylesheets %}
