--- a/templates/stockage/edit.html.twig
+++ b/templates/stockage/edit.html.twig
@@ -1,4 +1,4 @@
-{% extends 'gui/base.html.twig' %}
+{% extends 'gui/partials/base.html.twig' %}
 
 {% block title %}Édition du type de stockage{% endblock %}
 
